@@ -5,7 +5,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: menu.test,v 1.13 2002/07/14 05:48:46 dgp Exp $
+# RCS: @(#) $Id: menu.test,v 1.13.2.1 2003/07/15 13:59:06 vincentdarley Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -2423,7 +2423,7 @@ test menu-32.7 {DeleteMenuCloneEntries - one entry} {
     .m1 add command -label Hello
     list [catch {.m1 delete Hello} msg] $msg [destroy .m1]
 } {0 {} {}}
-test menu-32.8 {Ensure all menu clone commands are deleted} {knownBug} {
+test menu-32.8 {Ensure all menu clone commands are deleted} {
     # SF bug #465324
     catch {destroy .menubar}
     catch {destroy .menubar.test}
